src/index.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap");

@keyframes fadeInOpacity {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeInOpacityEasy {
  0% {
    opacity: 0.7;
  }
  100% {
    opacity: 1;
  }
}

.fade-in {
  opacity: 1;
  animation-name: fadeInOpacity;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 0.2s;
}

.fade-in-easy {
  opacity: 1;
  animation-name: fadeInOpacityEasy;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 0.5s;
}

html * {
  font-family: "Open Sans", sans-serif;
}

body {
  margin: 0;
}

p {
  margin: 0;
}

.header-link:hover {
  text-shadow: 0px 0px 1px #6161616e;
}

.name-container {
  display: table !important;
}

/* width */
.hide-scrollbar::-webkit-scrollbar {
  height: 12px;
}

/* Track */
.hide-scrollbar::-webkit-scrollbar-track {
  border-radius: 5px;
}

/* Handle */
.hide-scrollbar::-webkit-scrollbar-thumb {
  background: #00000087;
  border-radius: 5px;
}

@media only screen and (max-width: 320px) {
  .name {
    font-size: 52px !important;
  }
}

@media only screen and (min-width: 321px) {
  .name {
    font-size: 60px !important;
  }
}

@media only screen and (min-width: 600px) {
  .name {
    font-size: 75px !important;
  }
}

@media only screen and (min-width: 768px) {
}

@media only screen and (min-width: 1200px) {
}

